mesh-ex-v1-v2/headers.yaml
cat headers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: webserver-header
  name: webserver-header-v4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: webserver-header
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        deployment: webserver-header
    spec:
      containers:
      - image: quay.io/rhn_support_satripat/webserver-headers:v1
        imagePullPolicy: Always
        name: webserver-header
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver-header
    app.kubernetes.io/component: webserver-header
    app.kubernetes.io/instance: webserver-header
  name: webserver-header
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: webserver-header
  sessionAffinity: None
  type: ClusterIP
