mesh-ex-v1-v2/httpd-v1.yaml
# use $ oc new-app registry.redhat.io/rhel8/httpd-24 --name httpd-v1   //please use this command ---<
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd-v1
    app.kubernetes.io/component: httpd-v1
    app.kubernetes.io/instance: httpd-v1
  name: httpd-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: httpd-v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        deployment: httpd-v1
    spec:
      containers:
      - image: registry.redhat.io/rhel8/httpd-24
        imagePullPolicy: IfNotPresent
        name: httpd-v1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-v1
    app.kubernetes.io/component: httpd-v1
    app.kubernetes.io/instance: httpd-v1
  name: httpd-v1
  namespace: httpd-mesh
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: httpd-v1
  sessionAffinity: None
  type: ClusterIP
