mesh-ex-v1-v2/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpd-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "httpd-mesh.apps.killer.xxxx.xxxxx.xxxxx.xxxxx.com"
